<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chartview.ChartViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_add_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_entry" />

        <Button
            android:id="@+id/btn_remove_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_entry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_add_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bar" />

        <Button
            android:id="@+id/btn_remove_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_bar" />

        <Button
            android:id="@+id/btn_enable_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updates_disabled" />

    </LinearLayout>

    <fragment
        android:id="@+id/qt_fragment_container"
        class="com.felgo.ui.FelgoAndroidFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:qml_source="qml/ChartView.qml" />
</LinearLayout>