<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.animation.AnimationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"/>

        <Button
            android:id="@+id/btn_animate_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animate_items"/>

        <Button
            android:id="@+id/btn_clear_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_items"/>
    </LinearLayout>


    <fragment
        android:id="@+id/qt_fragment_container"
        class="com.felgo.ui.FelgoAndroidFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:qml_source="qml/Animations.qml" />
</LinearLayout>